tests/data/php/shouldpass/NamespacedException.php
<?php
/**
 * @package testdata.shouldpass
 */
class NamespacedException {
    /**
     * @throws \Exception
     */
    public function foo() {
        throw new \Exception();
    }
}