tests/data/php/shouldfail/NoPPrefix.php
<?php
/**
 * @package testdata.shouldfail
 */
class NoPPrefix {
    
    /**
     * Let's not prefix our vars
     */
    public function stuff($p_param1) {}
    
}